--- a/GerenciadorEmpresarial/GerenciadorEmpresarial.UI.csproj
+++ b/GerenciadorEmpresarial/GerenciadorEmpresarial.UI.csproj
@@ -58,6 +58,18 @@
     <Compile Include="Cargos\FrmControleDeCargos.Designer.cs">
       <DependentUpon>FrmControleDeCargos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Colaboradores\FrmColaboradores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Colaboradores\FrmColaboradores.Designer.cs">
+      <DependentUpon>FrmColaboradores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Colaboradores\FrmControleDeColaboradores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Colaboradores\FrmControleDeColaboradores.Designer.cs">
+      <DependentUpon>FrmControleDeColaboradores.cs</DependentUpon>
+    </Compile>
     <Compile Include="Departamentos\FrmControleDeDepartamentos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +101,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Cargos\FrmControleDeCargos.resx">
       <DependentUpon>FrmControleDeCargos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Colaboradores\FrmColaboradores.resx">
+      <DependentUpon>FrmColaboradores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Colaboradores\FrmControleDeColaboradores.resx">
+      <DependentUpon>FrmControleDeColaboradores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Departamentos\FrmControleDeDepartamentos.resx">
       <DependentUpon>FrmControleDeDepartamentos.cs</DependentUpon>
@@ -134,8 +152,6 @@
       <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Colaboradores\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
