--- a/GerenciadorEmpresarial/GerenciadorEmpresarial.UI.csproj
+++ b/GerenciadorEmpresarial/GerenciadorEmpresarial.UI.csproj
@@ -94,6 +94,18 @@
     <Compile Include="Menu\FrmMenuPrincipal.Designer.cs">
       <DependentUpon>FrmMenuPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Permissoes\FrmControleDePermissoes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Permissoes\FrmControleDePermissoes.Designer.cs">
+      <DependentUpon>FrmControleDePermissoes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Permissoes\FrmPermissoes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Permissoes\FrmPermissoes.Designer.cs">
+      <DependentUpon>FrmPermissoes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Cargos\FrmCargos.resx">
@@ -119,6 +131,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Menu\FrmMenuPrincipal.resx">
       <DependentUpon>FrmMenuPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Permissoes\FrmControleDePermissoes.resx">
+      <DependentUpon>FrmControleDePermissoes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Permissoes\FrmPermissoes.resx">
+      <DependentUpon>FrmPermissoes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
