--- a/GerenciadorEmpresarial/GerenciadorEmpresarial.UI.csproj
+++ b/GerenciadorEmpresarial/GerenciadorEmpresarial.UI.csproj
@@ -108,6 +108,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Salarios\FrmSalarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Salarios\FrmSalarios.Designer.cs">
+      <DependentUpon>FrmSalarios.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Cargos\FrmCargos.resx">
       <DependentUpon>FrmCargos.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,6 +153,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Salarios\FrmSalarios.resx">
+      <DependentUpon>FrmSalarios.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
