--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Departamento\DepartamentosBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validacoes\ValidateBase.cs" />
     <Compile Include="Validacoes\VerificarDigito.cs" />
   </ItemGroup>
   <ItemGroup>
