--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Departamento\DepartamentosBLL.cs" />
+    <Compile Include="Interfaces\IDepartamentoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\DepartamentoRepository.cs" />
     <Compile Include="Validacoes\ValidateBase.cs" />
     <Compile Include="Validacoes\VerificarDigito.cs" />
   </ItemGroup>
