--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,9 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cargo\CargosBLL.cs" />
     <Compile Include="Departamento\DepartamentosBLL.cs" />
+    <Compile Include="Interfaces\ICargoRepository.cs" />
     <Compile Include="Interfaces\IDepartamentoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\CargoRepository.cs" />
     <Compile Include="Repositorios\DepartamentoRepository.cs" />
     <Compile Include="Validacoes\ValidateBase.cs" />
     <Compile Include="Validacoes\VerificarDigito.cs" />
