--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -47,8 +47,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ClasseDeDados.dbml</DependentUpon>
     </Compile>
+    <Compile Include="DAO\Cargo\CargosDAO.cs" />
     <Compile Include="DAO\Contexto.cs" />
-    <Compile Include="DAO\Departamento\DepartamentoDAO.cs" />
+    <Compile Include="DAO\Departamento\DepartamentosDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
