--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DAO\Cargo\CargosDAO.cs" />
     <Compile Include="DAO\Contexto.cs" />
     <Compile Include="DAO\Departamento\DepartamentosDAO.cs" />
+    <Compile Include="DTO\Cargo\CargosDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -75,8 +76,6 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DTO\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
