--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Departamento\DepartamentosBLL.cs" />
     <Compile Include="Interfaces\ICargoRepository.cs" />
     <Compile Include="Interfaces\IDepartamentoRepository.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\CargoRepository.cs" />
     <Compile Include="Repositorios\DepartamentoRepository.cs" />
