--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -44,13 +44,26 @@
   <ItemGroup>
     <Compile Include="Cargo\CargosBLL.cs" />
     <Compile Include="Departamento\DepartamentosBLL.cs" />
+    <Compile Include="Enums\TipoNotificacao.cs" />
     <Compile Include="Interfaces\ICargoRepository.cs" />
     <Compile Include="Interfaces\IDepartamentoRepository.cs" />
+    <Compile Include="Interfaces\IValidacao.cs" />
+    <Compile Include="Notificacoes\ExtensaoNotificacao.cs" />
+    <Compile Include="Notificacoes\MensagemNotificacao.cs" />
+    <Compile Include="Notificacoes\MensagemNotificacaoComparador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recursos\MensagemNotificacaoResource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MensagemNotificacaoResource.resx</DependentUpon>
+    </Compile>
     <Compile Include="Repositorios\CargoRepository.cs" />
     <Compile Include="Repositorios\DepartamentoRepository.cs" />
-    <Compile Include="Validacoes\ValidateBase.cs" />
-    <Compile Include="Validacoes\VerificarDigito.cs" />
+    <Compile Include="Services\DepartamentoService.cs" />
+    <Compile Include="Services\IDepartamentoService.cs" />
+    <Compile Include="Services\MensagemNotificacaoService.cs" />
+    <Compile Include="ValidacoesGenericas\ValidateBase.cs" />
+    <Compile Include="ValidacoesGenericas\VerificarDigito.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
@@ -58,6 +71,11 @@
       <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Recursos\MensagemNotificacaoResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>MensagemNotificacaoResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
