--- a/APP/APP.csproj
+++ b/APP/APP.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F053BAB9-141D-4AFB-A999-F3A1B386BCA6}</ProjectGuid>
+    <ProjectGuid>{F065DAFC-E4EF-42E1-A907-DEB89EAC2DE1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BLL</RootNamespace>
-    <AssemblyName>BLL</AssemblyName>
+    <RootNamespace>APP</RootNamespace>
+    <AssemblyName>APP</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,8 +32,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,24 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cargo\CargosBLL.cs" />
-    <Compile Include="Departamento\DepartamentosBLL.cs" />
-    <Compile Include="Interfaces\ICargoRepository.cs" />
-    <Compile Include="Interfaces\ICargosBLL.cs" />
-    <Compile Include="Interfaces\IDepartamentoRepository.cs" />
-    <Compile Include="Interfaces\IValidacao.cs" />
+    <Compile Include="DTO\CargoDto.cs" />
+    <Compile Include="DTO\DepartamentoDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositorios\CargoRepository.cs" />
-    <Compile Include="Repositorios\DepartamentoRepository.cs" />
-    <Compile Include="Services\DepartamentoService.cs" />
-    <Compile Include="Services\InterfaceServices\IDepartamentoService.cs" />
-    <Compile Include="ValidacoesGenericas\ValidateBase.cs" />
-    <Compile Include="ValidacoesGenericas\VerificarDigito.cs" />
+    <Compile Include="Interfaces\ICargoService.cs" />
+    <Compile Include="Services\CargoService.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\DAL\DAL.csproj">
-      <Project>{3d1d5929-dec7-4c27-a173-347f8bdd596d}</Project>
-      <Name>DAL</Name>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{F053BAB9-141D-4AFB-A999-F3A1B386BCA6}</Project>
+      <Name>BLL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
