--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -47,20 +47,17 @@
     <Compile Include="Interfaces\ICargoRepository.cs" />
     <Compile Include="Interfaces\ICargosBLL.cs" />
     <Compile Include="Interfaces\IDepartamentoRepository.cs" />
+    <Compile Include="Interfaces\IGenericRepository.cs" />
     <Compile Include="Interfaces\IValidacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\CargoRepository.cs" />
     <Compile Include="Repositorios\DepartamentoRepository.cs" />
+    <Compile Include="Repositorios\GenericRepository.cs" />
     <Compile Include="Services\DepartamentoService.cs" />
+    <Compile Include="Services\InterfaceServices\ICargoService.cs" />
     <Compile Include="Services\InterfaceServices\IDepartamentoService.cs" />
     <Compile Include="ValidacoesGenericas\ValidateBase.cs" />
     <Compile Include="ValidacoesGenericas\VerificarDigito.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DAL\DAL.csproj">
-      <Project>{3d1d5929-dec7-4c27-a173-347f8bdd596d}</Project>
-      <Name>DAL</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
